--- a/Simple Linear Regression using Python.ipynb
+++ b/Simple Linear Regression using Python.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "\n",
     "\n",
-    
+    "## DS_D34_LU1_V1.0   "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this  building a Simple Linear Regression Model  "
+    "In this demo, you will be building a Simple Linear Regression Model  "
    ]
   },
   {
